# saifu

./: .travis.yml  README.md  pyproject.toml
saifu/: accounts.py  crypto.py  keystore.py  keystore_old.py  main.py  network.py  networkmanager.py  networks.py  store.py  wallet.py
saifu/commands/: __init__.py  account.py  balance.py  network.py  networks.py
saifu/views/: __init__.py  account.py  balance.py  message.py  network.py  networks.py
tests/: test_keystore.py  test_saifu.py  test_store.py  test_wallet.py
