[tool.poetry]
name = "saifu"
version = "0.1.0"
description = "A safe cli wallet for TomoChain"
readme = "README.md"
license = "GPL-3.0+"
homepage = "https://github.com/etienne-napoleone/saifu"
repository = "https://github.com/etienne-napoleone/saifu"
keywords = ["tomochain", "wallet", "cli", "blockchain"]
authors = ["etienne-napoleone <etienne@tomochain.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
cryptography = "^2.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
coverage = "^4.5"
coveralls = "^1.6"

[tool.poetry.scripts]
saifu = "saifu.main:entrypoint"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

